rectification des bordures et ajout de mon profil en haut à gauche

--- a/frontend/src/userPage.html
+++ b/frontend/src/userPage.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div id="entete">
-        <h1 id="titlePolyte">Polyte</h1><h1 id="titleX">X</h1>
+        <div id="titreComplet">
+            <h1 id="titlePolyte">Polyte</h1>
+            <h1 id="titleX">X</h1>
+        </div>
+        <div id="monProfil">
+            <h2 id="monNom">Huguette231</h2>
+            <img id="maPhoto" src="../data/huguette.avif">
+        </div>
     </div>
 
     <div id="presentation">
