ajoute les champs requis pour la connexion

--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -6,6 +6,15 @@
     <title>PolyteX</title>
 </head>
 <body>
+
+    <div id="login-box">
+        <div id="id-field-box">
+            <input type="email" name="email" id="email-field" placeholder="E-mail" />
+            <input type="text" name="pseudo" id="pseudo-field" placeholder="Pseudo">
+        </div>
+        
+        <input type="password" name="password" id="password-field" placeholder="Mot de passe"/>
+    </div>
     
 </body>
 </html>
