ajoute un titre

--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -10,6 +10,8 @@
 <body>
 
     <div id="login-box">
+        <h1>Connexion</h1>
+
         <div id="id-field-box">
             <input type="email" name="email" id="email-field" placeholder="E-mail" />
             <input type="text" name="pseudo" id="pseudo-field" placeholder="Pseudo">
