--- a/frontend/src/userPage.html
+++ b/frontend/src/userPage.html
@@ -14,8 +14,8 @@
             <h1 id="titleX">X</h1>
         </div>
         <div id="monProfil">
-            <h2 id="monNom">Huguette231</h2>
-            <img id="maPhoto" src="../data/huguette.avif">
+            <a href=""><h2 id="monNom">Huguette231</h2></a>
+            <img id="maPhoto" src="../data/huguette.avif"> 
         </div>
     </div>
 
@@ -25,6 +25,7 @@
             <h2> Michel Michel</h2>
             <h4> @MichelMichel</h4>
             <h4> Il/Elle/Iel</h4>
+            <button id="suscribeButton"> <img id="suscribe" src="../data/plus.png"></button>
         </div>
         <p> Ceci est une description descriptive de ce que fait MichelMichel notre personne X dans sa vie</p>
     </div>
