Les boutons d'interractions sont clickables et ont une action, réponse aux tests

--- a/frontend/src/userPage.html
+++ b/frontend/src/userPage.html
@@ -33,11 +33,14 @@
         <div id="premierPost">
             <p>Ceci est un premier post ou le profil raconte sa vie il vous dit même qu'il aime les radis parce que c'est bon les radis</p>
             <div id="zoneInterraction">
-                <button> <img id="like" src="../data/coeur.png"></button>
-                <button> <img  id="commentaire" src="../data/commentaire.jpeg"></button>
-                <button> <img  id="share" src="../data/partage.png"></button>
+                <button id="likeButton"> <img id="like" src="../data/coeur.png"></button>
+                <button id="commentButton"> <img  id="commentaire" src="../data/commentaire.jpeg"></button>
+                <button id="shareButton"> <img  id="share" src="../data/partage.png"></button>
             </div>
         </div>
     </div>
+    <script src="profile.js"></script>
+
+
 </body>
 </html>
