--- a/frontend/src/pages/mainfeed.html
+++ b/frontend/src/pages/mainfeed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flux de Tweets</title>
-    <link href="styles/mainfeed.css" rel="stylesheet">
+    <link href="../styles/mainfeed.css" rel="stylesheet">
 </head>
 <body>
     <div id="entete">
