--- a/frontend/src/pages/userPage.html
+++ b/frontend/src/pages/userPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Utilisateur</title>
-    <link href="styles/mainProfile.css" rel="stylesheet">
+    <link href="../styles/mainProfile.css" rel="stylesheet">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script src="profile.js"></script>
+    <script src="../js/profile.js"></script>
 
 
 </body>
