Ajout des images et adaptations du code pour les accomoder

--- a/frontend/src/detailpost.html
+++ b/frontend/src/detailpost.html
@@ -14,13 +14,13 @@
         </div>
         <div id="monProfil">
             <a href=""><h2 id="monNom">Huguette231</h2></a>
-            <img id="maPhoto" src="../data/jill.png"> 
+            <img id="maPhoto" src="../data/huguette.avif"> 
         </div>
     </div>
 
     <div id="posterOriginalProfil">
         <div id="premiereRangeeProfil">
-            <img id="photoOP" src="../data/superphototropbien.jpeg">
+            <img id="photoOP" src="../data/jill.png">
             <button id="suscribeButton"> <img id="suscribe" src="../data/plus.png"></button>
             <div id="infoTextuelle">
                 <h2> Julianne Stingray</h2>
@@ -35,7 +35,7 @@
         <div id="postDetaille">
             <div id="infoPosteur">
                 <div id="premiereRangeeInfoPosteur">
-                    <img id="photoPosteur" src="jill.png">
+                    <img id="photoPosteur" src="../data/jill.png">
                     <div id="infoTextuellePosteur">
                         <h2> Julianne Stingray</h2>
                         <h4> @j1ll</h4>
@@ -62,7 +62,7 @@
         <div class="reponse">
             <div id="infoRepondeur">
                 <div id="premiereRangeeInfoRepondeur">
-                    <img id="photoRepondeur" src="random.png">
+                    <img id="photoRepondeur" src="../data/photoProfilRandom.jpeg">
                     <div id="infoTextuelleRepondeur">
                         <h2> Random</h2>
                         <h4> @random</h4>
