--- a/frontend/src/detailpost.html
+++ b/frontend/src/detailpost.html
@@ -20,15 +20,17 @@
 
     <div id="posterOriginalProfil">
         <div id="premiereRangeeProfil">
-            <img id="photoOP" src="../data/jill.png">
+            <img id="photoProfil" src="../data/jill.png">
             <button id="suscribeButton"> <img id="suscribe" src="../data/plus.png"></button>
-            <div id="infoTextuelle">
+            <div id="infopersos">
                 <h2> Julianne Stingray</h2>
                 <h4> @j1ll</h4>
                 <h4> Elle</h4>
             </div>
         </div>
-        <p> Ceci est une description descriptive de ce que fait Julianne Stingray dans sa vie</p>    
+        <div id="presentation">
+            <p> Ceci est une description descriptive de ce que fait Julianne Stingray dans sa vie</p>    
+        </div>
     </div>
 
     <div id="zonePostDetaille">
@@ -71,6 +73,11 @@
                 </div>
                 <p id="datePostage">
                     23:27 - 21/06/2016
+                </p>
+            </div>
+            <div id="texteReponse">
+                <p>
+                    Un commentaire qui n'est pas incendiaire
                 </p>
             </div>
 
