Mis en place de la bonne disposition des 3 parties de la page

--- a/frontend/src/detailpost.html
+++ b/frontend/src/detailpost.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div id="posterOriginalProfil">
+    <div id="posteurOriginalProfil">
         <div id="premiereRangeeProfil">
             <img id="photoProfil" src="../data/jill.png">
             <button id="suscribeButton"> <img id="suscribe" src="../data/plus.png"></button>
