Ajoute le javascript pour se connecter et s'inscrire Note : comme je n'ai pas encore le nom de domaine de l'api, j'ai mis le placeholder https://api.example.com/auth/sign_in

--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/register.css">
 
+    <script src="../js/register.js"></script>
+
     <title>PolyteX</title>
 </head>
 <body>
@@ -23,7 +25,7 @@
         <input type="password" name="password" id="password-field" placeholder="Mot de passe"/>
     </div>
     
-    <button type="button">Connexion</button>
+    <button type="button" id="login-button">Connexion</button>
 </div>
 
 </body>
