Déplacement du html et du js dans les dossiers apropriés

--- a/frontend/src/pages/detailpost.html
+++ b/frontend/src/pages/detailpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/detailpost.css">
+    <link rel="stylesheet" href="../styles/detailpost.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Détail du post</title>
@@ -14,14 +14,14 @@
         </div>
         <div id="monProfil">
             <a href=""><h2 id="monNom">Huguette231</h2></a>
-            <img id="maPhoto" src="../data/huguette.avif"> 
+            <img id="maPhoto" src="../../data/huguette.avif"> 
         </div>
     </div>
 
     <div id="posteurOriginalProfil">
         <div id="premiereRangeeProfil">
-            <img class="photoPosteur" src="../data/jill.png">
-            <button id="suscribeButton"> <img id="suscribe" src="../data/plus.png"></button>
+            <img class="photoPosteur" src="../../data/jill.png">
+            <button id="suscribeButton"> <img id="suscribe" src="../../data/plus.png"></button>
             <div id="infopersos">
                 <h2> Julianne Stingray</h2>
                 <h4> @j1ll</h4>
@@ -38,7 +38,7 @@
         <!-- C'est le post Original -->
             <div id="infoPosteur">
                 <div id="premiereRangeeInfoPosteur">
-                    <img class="photoPosteur" src="../data/jill.png">
+                    <img class="photoPosteur" src="../../data/jill.png">
                     <div id="infoTextuellePosteur">
                         <h2> Julianne Stingray</h2>
                         <h4> @j1ll</h4>
@@ -54,9 +54,9 @@
                     Mon aéroglisseur est plein d'anguille
                 </p>
                 <div id="zoneInterraction">
-                    <button id="likeButton"> <img id="like" src="../data/coeur.png"></button>
-                    <button id="commentButton"> <img  id="commentaire" src="../data/commentaire.jpeg"></button>
-                    <button id="shareButton"> <img  id="share" src="../data/partage.png"></button>
+                    <button id="likeButton"> <img id="like" src="../../data/coeur.png"></button>
+                    <button id="commentButton"> <img  id="commentaire" src="../../data/commentaire.jpeg"></button>
+                    <button id="shareButton"> <img  id="share" src="../../data/partage.png"></button>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
         <!-- C'est une réponse -->
             <div id="infoRepondeur">
                 <div id="premiereRangeeInfoRepondeur">
-                    <img class="photoPosteur" src="../data/photoProfilRandom.jpeg">
+                    <img class="photoPosteur" src="../../data/photoProfilRandom.jpeg">
                     <div id="infoTextuelleRepondeur">
                         <h2> Random</h2>
                         <h4> @random</h4>
@@ -86,6 +86,6 @@
         </div>
     </div>
     
-    <script src="detailpost.js"></script>
+    <script src="../js/detailpost.js"></script>
 </body>
 </html>
